<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:textColorHint="@color/dune"
            android:background="@drawable/edit_text_background"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:textColorHint="@color/dune"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/carrot_orange"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:text="@string/new_login"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textSignup"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textColor="@color/carrot_orange"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>